--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "to-do-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://keshabdas.github.io/TodoList-Context",
   "dependencies": {
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1"
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "dev": "npm run build && npm run deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,8 +33,11 @@
     ],
     "development": [
       "last 1 chrome version",
-	  "last 1 firefox version",
+      "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^5.1.0"
   }
 }
